test/typecheck/errors/bad-views3.boa
view sv {
	s := 2;
}

v := sv/s;
